got stuck at mapfjx not supporting event listeners for lines